Make the bot not castle in illegal positions